snapshot-tests/tests/snapshots/parser__bad_underscores__trailing.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ trailing:1:8
  │
1 │ foo = 0_
  │        ^ invalid integer: underscores must be between two digits at foo
